--- a/style.css
+++ b/style.css
@@ -7,60 +7,73 @@ body {
       animation: mymove 5s infinite;
      }
 
-  .sidenav {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #111;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 60px;
-  }
-  
-  .sidenav a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #9e2914;
-    display: block;
-    transition: 0.3s;
-  }
-  
-  .sidenav a:hover {
-    color: #f1f1f1;
-  }
-  
-  .sidenav .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
-  }
 
-  #main {
-    transition: margin-left .5s;
-    padding: 16px;
-   
-  }
-  #menu-icon {
-    position: fixed;
-    z-index: 1;
-    left: 10px;
-    top: 10px;
-}
-  
-  @media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
-  }
+     .sidenav {
+      height: 100%;
+      width:0;
+      position: fixed;
+      z-index: 1;
+      top: 0;
+      left: 0;
+      background-color: #313131;
+      overflow-x: hidden;
+      transition: 0.5s;
+      padding-top: 10px;
+    }
+    
+    .sidenav a {
+      padding: 8px 8px 8px 32px;
+      text-decoration: none;
+      font-size: 25px;
+      color: #efd9f8;
+      display: block;
+      transition: 0.3s;
+    }
+    
+    .sidenav a:hover {
+      color: #b63636f3;
+    }
+    
+    .sidenav .closebtn {
+      position: absolute;
+      top: 0;
+      right: 25px;
+      font-size: 36px;
+      margin-left: 50px;
+    }
+    
+    #main {
+      transition: margin-left .5s;
+
+    }
+    
+    @media screen and (max-height: 450px) {
+      .sidenav 
+      .sidenav a {font-size: 18px;}
+    }  
+ 
   /* Avater */
   img {
     border-radius: 50%;
   }
+/* copywriting */
+.typewriter {
+  overflow: hidden; 
+    white-space: normal; 
+  margin: 0 auto; 
+  letter-spacing: .15em; 
+  animation: typing 10.5s steps(30, end),
+}
+
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: orange; }
+}
 
   /* social media */
   .social-media {
@@ -101,14 +114,7 @@ body {
     padding: 20px;
   }
 
-/* Style for the bubbles */
-.bubble {
-  position: absolute;
-  background-color: rgba(255, 255, 255, 0.5);
-  border-radius: 50%;
-  z-index: -1;
-  pointer-events: none;
-}
+
  /* footer */
 
 footer {
@@ -130,3 +136,4 @@ footer .card-body {
 footer .card-body.list-unstyled {
   text-align: center;
 }
+
